Add post attraction method imple
